update java section && remove backpack overlay