@@ -4,9 +4,11 @@
 
 My GTNH setup and shitcoded python patcher for configs
 
-## JVMArgs
+## Java
 
-Check <https://github.com/brucethemoose/Minecraft-Performance-Flags-Benchmarks>
+I prefer GraalVM EE JDK 23:
+
+`scoop install graalvm-oracle-jdk` on Windows, find it yourself on Linux
 
 ### RAM
 
@@ -14,25 +16,43 @@ Check <https://github.com/brucethemoose/Minecraft-Performance-Flags-Benchmarks>
 -Xms8G -Xmx8G
 ```
 
-### Network
+### Args
 
-Add this to fix `Timed out` (need to set this both on client and server)
+(if it is **failed to reserve and commit memory**, remove last line or download more RAM)
 
-```bash
--Dfml.readTimeout=180
+```sh
+-Dfml.readTimeout=9001
+-XX:+UnlockExperimentalVMOptions -XX:+UnlockDiagnosticVMOptions -XX:+AlwaysActAsServerClassMachine -XX:+AlwaysPreTouch -XX:+DisableExplicitGC -XX:NmethodSweepActivity=1 -XX:ReservedCodeCacheSize=400M -XX:NonNMethodCodeHeapSize=12M -XX:ProfiledCodeHeapSize=194M -XX:NonProfiledCodeHeapSize=194M -XX:-DontCompileHugeMethods -XX:+PerfDisableSharedMem -XX:+UseFastUnorderedTimeStamps -XX:+UseCriticalJavaThreadPriority -XX:+EagerJVMCI -Dgraal.TuneInlinerExploration=1
+-XX:+UseG1GC -XX:MaxGCPauseMillis=37 -XX:+PerfDisableSharedMem -XX:G1HeapRegionSize=16M -XX:G1NewSizePercent=23 -XX:G1ReservePercent=20 -XX:SurvivorRatio=32 -XX:G1MixedGCCountTarget=3 -XX:G1HeapWastePercent=20 -XX:InitiatingHeapOccupancyPercent=10 -XX:G1RSetUpdatingPauseTimePercent=0 -XX:MaxTenuringThreshold=1 -XX:G1SATBBufferEnqueueingThresholdPercent=30 -XX:G1ConcMarkStepDurationMillis=5.0 -XX:GCTimeRatio=99 -XX:AllocatePrefetchStyle=3
+-XX:+UseLargePages -XX:LargePageSizeInBytes=2m
 ```
 
-### Old args for JVM8
+<details>
+  <summary>Info</summary>
 
-Set max threads to your CPU count
+  Default GTNH tunes GC a little bit, but my memory is leaking by default. [They wiki references](https://gtnh.miraheze.org/wiki/Installing_and_Migrating#Java_Arguments_for_Java_8) to repo with JVM args research, [but it wasn't updated for long](https://github.com/brucethemoose/Minecraft-Performance-Flags-Benchmarks/issues/53), so someone made fork and then remastered it:
 
-<https://discord.com/channels/181078474394566657/234936569360809996/537728390363348992>
+  <https://github.com/Mukul1127/Minecraft-Java-Flags>
 
-```bash
--XX:+UseConcMarkSweepGC -XX:+DisableExplicitGC -XX:MaxGCPauseMillis=80 -XX:+UseStringDeduplication -XX:+UseCompressedOops -XX:+UseCodeCacheFlushing -XX:ParallelGCThreads=6
-```
+  For my case I used these sections
+
+  0. `-Dfml.readTimeout=9001` for fixing `Timed out` errors if enabled on server
+  1. #GraalVM 17+
+  2. #Client G1GC
+  3. #Large Pages
+
+</details>
 
 ## config/
+
+### adventurebackpack.cfg
+
+To disable useless tanks and potions overlay
+
+```ini
+        B:"Enable Overlay"=true
+        B:"Enable Overlay"=false
+```
 
 ### defaultworldgenerator.cfg
 
@@ -83,7 +103,7 @@ Blood and warp monitoring for IGIXML. Paste after these lines
 
 ### InGameInfoXML.cfg
 
-Normal config for IGIXML
+Make IGIXML to use default font size
 
 ```ini
 I:"scale(new)"=5
